--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         #stack {
             flex: 2;
             padding-top: 5px;
-            /* padding-right: 25px; */
+            padding-right: 10px;
             /* margin-bottom: 15px; */
             max-height: 100vh;
             overflow-y: auto;
         }
 
         #controls {
-            flex: 1;
-            min-width: 150px;
+            flex: 0.5;
+            min-width: 100px;
         }
 
         div {
@@ -113,6 +113,7 @@
 
         .controlButtons {
             display: flex;
+            flex-direction: column;
         }
 
         .controlButtons button {
@@ -165,6 +166,8 @@
             </div>
             <div>
                 <input type="color" v-model="currentColour" style="margin-right: 5px" />
+            </div>
+            <div>
                 <button class="color_button" v-for="colour in lastUsedColours" :key="colour"
                     :style="{backgroundColor: colour}" @click="currentColour = colour">
                     &nbsp;&nbsp;
