--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             outline: 2px solid red; */
         }
 
+        .esp-zone {
+            text-align: right;
+        }
+
         .esp-zone.unselected,
         .ebp-zone.unselected {
             opacity: 0;
@@ -90,6 +94,7 @@
 
             outline: 4px solid black;
             cursor: pointer;
+            max-width: 600px;
         }
 
         .fake-block {
@@ -109,6 +114,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            max-width: 600px;
         }
 
         .controlButtons {
